fix an issue with the local path, add 5s timeout for ssh git remote operations